최신 Python 호환, 테스트 통과, GitHub Actions 워크플로우 추가

--- a/workshop/upgraded/MANIFEST.in
+++ b/workshop/upgraded/MANIFEST.in
@@ -1,3 +1,5 @@
-include README.rst
-include distribute-0.6.10.tar.gz
+include setup.py
 include distribute_setup.py
+include guachi/tests/*
+include docs/*
+
